--- a/styles/style.css
+++ b/styles/style.css
@@ -22,55 +22,24 @@ html {
     width: 5rem;
     height: 5rem;
 }
-
-
-
 .b-square {
-    background: #b67b57;
     cursor: move;
-    width: 4.9rem;
-    height: 4.9rem;
-    border-radius: 1rem;
     margin: auto;
 }
 
 .r-square {
     background: #3b2828;
-    cursor: not-allowed;
-}
-.cell.dragged {
-    user-select: none;
-    opacity: 1;
     cursor: default;
 }
 
-/* Drag and Drop Related Styling
-
-
-.droppable.dropped {
-    border-style: solid;
-    color: #fff;
+.char {
+    border-radius: 50%;
+    background: rgba(18, 255, 0, 0.3);
 }
-.droppable.dropped span {
-    font-size: 0.75rem;
-    margin-top: 0.5rem;
-}
-.droppable.dropped i {
+
+.image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
     pointer-events: none;
 }
-.draggable.dragged {
-    user-select: none;
-    opacity: 0.1;
-    cursor: default;
-}
-.draggable.dragged:hover {
-    opacity: 0.1;
-}
-
-@media (max-width: 600px) {
-    html { font-size: 14px; }
-    .draggable-elements { margin: 1.5rem; }
-}
-
-*/
-
