--- a/styles/style.css
+++ b/styles/style.css
@@ -9,10 +9,9 @@ html {
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 0.1rem;
     margin: auto;
-    width: 15.2rem;
-    height: 15.2rem;
+    width: 15rem;
+    height: 15rem;
     border: gray 30px solid;
     background: #ececec;
 
@@ -42,4 +41,9 @@ html {
     width: 100%;
     height: 100%;
     pointer-events: none;
+}
+
+.flag {
+    background: #a100ff;
+    border-radius: 20%;
 }
