--- a/styles/style.css
+++ b/styles/style.css
@@ -16,8 +16,8 @@ body {
     margin: auto;
     width: 15rem;
     height: 15rem;
-    border: 30px solid transparent;
-    border-image: url(../images/wall.png);
+    border: 50px solid transparent;
+    border-image: url(../images/wall.png) 0 round;
 
 }
 
@@ -56,6 +56,7 @@ body {
 }
 
 .char {
+    background-image: url(../images/char.jpg);
 }
 
 .image {
