--- a/styles/style.css
+++ b/styles/style.css
@@ -45,8 +45,8 @@ body {
     width: 5rem;
     height: 5rem;
     background-color: #e4dcd1;
-    /*background-image: url(../images/floor.png);
-    background-size: 100%;*/
+    background-image: url(../images/floor.png);
+    background-size: 100%;
 
 }
 .b-square {
@@ -71,6 +71,5 @@ body {
 }
 
 .flag {
-    border-radius: 20%;
-    background-image: url(../images/flag.jpg);
+    background-image: url(../images/flag.png);
 }
