--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,19 @@
 
+@font-face {
+    font-family: 'VPPixel';
+    src: url('VPPixel-Simplified.otf');
+}
+
+
 html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'VPPixel', sans-serif;
 }
 
 body {
     background-color: #e4dcd1;
-
 }
 
 
@@ -87,6 +93,7 @@ body {
     border-left: 0;
     border-right: 0;
     border-image: url(../images/border.png) 50 stretch;*/
+    font-family: VPPixel, sans-serif;
     font-size: 2rem;
     font-weight: bold;
     cursor: pointer;
@@ -101,7 +108,6 @@ h1{
     text-align: center;
     font-size: 3rem;
     font-weight: bold;
-    font-family: Tahoma, sans-serif;
     color: #000000;
     margin: 0;
     padding: 1rem;
