--- a/styles/style.css
+++ b/styles/style.css
@@ -80,10 +80,10 @@ body {
 .flag {
     background-image: url(../images/flag.png);
 }
-#hint{
+#hint {
     display: none;
     justify-content: center;
-    margin: 1rem auto;
+    margin: 0.5rem auto 0 auto;
 }
 #buttonSolve {
     margin: 0.5rem auto;
@@ -95,7 +95,7 @@ body {
     border: transparent 0.1rem solid;
     border-radius: 0.3rem;
     font-family: VPPixel, sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     cursor: pointer;
 }
@@ -109,7 +109,7 @@ body {
      border: transparent 0.1rem solid;
      border-radius: 0.3rem;
      font-family: VPPixel, sans-serif;
-     font-size: 2rem;
+     font-size: 1.5rem;
      font-weight: bold;
      cursor: pointer;
  }
@@ -123,7 +123,7 @@ body {
     border: transparent 0.1rem solid;
     border-radius: 0.3rem;
     font-family: VPPixel, sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     cursor: pointer;
 }
@@ -137,7 +137,7 @@ body {
     border: transparent 0.1rem solid;
     border-radius: 0.3rem;
     font-family: VPPixel, sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     cursor: pointer;
 }
@@ -149,9 +149,9 @@ body {
 
 h1{
     text-align: center;
-    font-size: 4rem;
+    font-size: 3rem;
     color: #000000;
-    margin: 0.5rem auto;
+    margin: 0 auto;
     /*
     border-bottom: 0.5rem solid transparent;
     border-top: 0.5rem solid transparent;
@@ -160,10 +160,14 @@ h1{
     border-image: url(../images/border.png) 50 stretch;*/
 }
 
-@media screen and (max-width: 450px) {
-    img {
+
+@media screen and (max-width: 500px) {
+    #hint {
         width: 100%;
         height: auto;
+    }
+    h1 {
+        font-size: 3rem;
     }
 }
 
